syntax = "proto3";
package upload;
import "protoc-gen-openapiv2/options/annotations.proto";
import "github.com/mwitkow/go-proto-validators/validator.proto";
import "google/api/annotations.proto";
import "tailmon/protobuf/empty/empty.proto";
import "tailmon/protobuf/response/response.proto";
import "tailmon/protobuf/request/param.proto";
import "danielvladco/protobuf/graphql.proto";
import "tailmon/protobuf/oauth/oauth.proto";
import "tailmon/protobuf/utils/patch/go.proto";
import "google/protobuf/wrappers.proto";

option java_package = "xyz.hoper.protobuf.upload";
option go_package = "github.com/actliboy/hoper/server/go/protobuf/upload";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    version: "1.0"
  }
};

service UploadService {

  option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_tag) = {
    description: "上传中心相关接口"
  };
  // 获取url
  rpc GetUrls (GetUrlsReq) returns (GetUrlsRep) {
    option (google.api.http) = {
      post: "/api/v1/urls"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags:["获取url相关接口", "util", "v1.0.0"]
      summary : "获取url"
      description : "获取url接口"
    };
    option (danielvladco.protobuf.graphql.rpc) = {type: QUERY};
  }

  // 获取url
  rpc GetUrlsByStrId (GetUrlsByStrIdReq) returns (GetUrlsRep) {
    option (google.api.http) = {
      get: "/api/v1/urls"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      tags:["获取url相关接口", "util", "v1.0.0"]
      summary : "获取url"
      description : "获取url接口"
    };
    option (danielvladco.protobuf.graphql.rpc) = {type: QUERY};
  }
}

message GetUrlsReq {
  repeated uint64 ids = 1 [(go.field) = {tags:'validate:"required" annotation:"ids"'}];
}

message GetUrlsByStrIdReq {
  string ids = 1 [(go.field) = {tags:'validate:"required" annotation:"ids"'}];
}

message UploadInfo {
  uint64 id = 1 [(go.field) = {tags:'annotation:"id"'}];
  string url = 2 [(go.field) = {tags:'annotation:"url"'}];
}

message GetUrlsRep {
  repeated UploadInfo UploadInfos = 1[(go.field) = {tags:'annotation:"上传文件信息"'}];
}
